Upgrade to Java 25, Hibernate 7.1, Postgresql 18.1